--- a/.github/workflows/ml_ci_cd.yml
+++ b/.github/workflows/ml_ci_cd.yml
@@ -23,9 +23,9 @@ jobs:
     - name: pip install
       run: pip install -r requirements.txt
     - name: download dataset
-      run: wget -O data/heart_disease.csv ${{github.event.client_payload.dataseturl}}
+      run: wget -O data/fraud-detection.csv ${{github.event.client_payload.dataseturl}}
     - name: cat dataset
-      run: cat data/heart_disease.csv
+      run: cat data/fraud-detection.csv
     - name: train model
       run: python model/train.py
     - name: docker build
